--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,12 @@
     <description>Selenium project starter with JUnit Jupiter</description>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <cucumber.version>6.2.2</cucumber.version>
         <java.version>14</java.version>
         <junit.jupiter.version>5.6.2</junit.jupiter.version>
         <junit.platform.version>1.3.2</junit.platform.version>
-        <cucumber.version>6.2.2</cucumber.version>
+        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -91,6 +92,17 @@
 
     <build>
         <plugins>
+            <plugin>
+                <!-- This is what sets the module language level in IntelliJ project structure, and the
+                    language level in the IntelliJ settings. -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.plugin.version}</version>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
